Fixed body and footer shifting when opening bootstrap modal.

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -101,3 +101,8 @@ body {
 .center {
     text-align: center;
 }
+
+.modal-open {
+    overflow: inherit;
+    padding-right: 0 !important;
+}
